@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 
 - Resize canvas to video container dimensions
+- Limit quota by setting max number of fetches per video load
 
 ## [2.0.0] - 2023-10-09
 
